[tool.poetry]
name = "q-learing-for-bandwidth-reservation-in-multi-network-operator-env"
version = "0.1.0"
description = ""
authors = ["Qubut <qubut@tutanota.com>"]
readme = "README.md"
packages = [{include = "q_learing_for_bandwidth_reservation_in_multi_network_operator_env"}]

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.0.1"
tianshou = "^0.5.1"
gym = "^0.26.2"
pandas = "^2.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
